# chatterbox

./: .gitignore  chatterbox_server.py  chatterbox_serverUpgraded.py  download_voices.py  example_tts.py  example_tts_turbo.py  pyproject.toml  serve.py
templates/: index.html
