[project]
name = "chatterbox-tts"
version = "0.1.7"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    # numpy 1.x for Python < 3.13 (no 1.x wheels on 3.13+), numpy 2.x for 3.13+
    "numpy>=1.24.0,<2.0.0; python_version < '3.13'",
    "numpy>=2.0.0; python_version >= '3.13'",
    "librosa==0.11.0",
    "s3tokenizer",
    # torch 2.7.0 supports Python 3.10-3.13; Python 3.14 needs 2.9.0+
    "torch==2.7.0; python_version < '3.14'",
    "torch>=2.9.0; python_version >= '3.14'",
    "torchvision==0.22.0; python_version < '3.14'",
    "torchvision>=0.24.0; python_version >= '3.14'",
    "torchaudio==2.7.0; python_version < '3.14'",
    "torchaudio>=2.9.0; python_version >= '3.14'",
    "torchcodec",
    "transformers==5.2.0",
    "diffusers==0.29.0",
    "resemble-perth @ git+https://github.com/resemble-ai/Perth.git@master",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "gradio==6.8.0",
    "pyloudnorm",
    "omegaconf"
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# uv: resolve torch / torchvision / torchaudio from the PyTorch CUDA 12.8
# wheel index so that GPU-accelerated builds are installed automatically.
# (equivalent to: pip install torch==2.7.0 torchvision==0.22.0 torchaudio==2.7.0
#                            --index-url https://download.pytorch.org/whl/cu128)
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch       = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio  = { index = "pytorch-cu128" }

[[tool.uv.indexes]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true
